feat: 后端处理文件大小、进度条

--- a/base64上传图片.html
+++ b/base64上传图片.html
@@ -82,10 +82,14 @@
                 headers: {
                   'Content-Type': 'application/x-www-form-urlencoded'
                 },
-                data: (new URLSearchParams({
+                // data: (new URLSearchParams({
+                //   file: fileList[index].base64,
+                //   filename: fileList[index].filename
+                // })).toString()
+                data: {
                   file: fileList[index].base64,
                   filename: fileList[index].filename
-                })).toString()
+                }
               })
             }
           postList.push(_request())
